--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <img src="assets/img/clients/Ford.png" class="d-block w-100" alt="Car 2">
               </div>
               <div class="carousel-item">
-                <img src="assets/img/clients/golf7.png" class="d-block w-100" alt="Car 3">
+                <img src="assets/img/clients/golf%207.png" class="d-block w-100" alt="Car 3">
               </div>
               <div class="carousel-item">
                 <img src="assets/img/clients/Volkswagen8.png" class="d-block w-100" alt="Car 3">
